# zTranslate

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: release.yml
dependencies/: CMakeLists.txt  SHA256.cmake  tinyjson.cmake
dependencies/tinyjson/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  specifications.md
dependencies/tinyjson/.github/workflows/: c-cpp.yml
dependencies/tinyjson/example/: README.md  basic_parse.cpp  fast_dump.cpp  options.cpp  options11.cpp  user_literals.cpp
dependencies/tinyjson/src/: TinyJSON.cpp  TinyJSON.h
dependencies/tinyjson/tests/: CMakeLists.txt  testjsonchecker.cpp  testshelper.h  testtinyjson.cpp  testtinyjsonarrays.cpp  testtinyjsonbooleans.cpp  testtinyjsondump.cpp  testtinyjsonexceptions.cpp  testtinyjsonexponents.cpp  testtinyjsoniterators.cpp  testtinyjsonnulls.cpp  testtinyjsonnumbers.cpp  testtinyjsonobjects.cpp  testtinyjsonstrings.cpp  testtinyjsonvaluesget.cpp  testtinyjsonversion.cpp  testtinyjsonwrite.cpp
dependencies/tinyjson/tests/data/JSON_checker/: README.md  pass1.json
dependencies/union/: CMakeLists.txt
resources/: README.md  g1.txt  g1a.txt  g2.txt  g2a.txt  generate-names.py  generate.py
src/: Plugin.cpp  Plugin.hpp  Sources.hpp
src/Plugin/: Helper.hpp  Hooks.hpp  Init.hpp  Menu.hpp  Sound.hpp  Text.hpp
vdf/: build.vm
